prevent tables breaking across pages (I hope) https://ricard.dev/prevent-html-tables-from-being-cut-off-on-new-pages/

--- a/inst/resources/css/style_paged_reportcard.css
+++ b/inst/resources/css/style_paged_reportcard.css
@@ -329,3 +329,11 @@ p, ul {
   img {
     max-width: 100%;
   }
+  
+  @media print { 
+  table,
+  table tr td,
+  table tr th {
+    page-break-inside: avoid;
+  }
+}
